# metalloid

./: Cargo.toml  Readme.md
src/: executor.rs  graph.rs  lib.rs  state.rs  target.rs
src/state/: compose.rs  condition.rs  depends_on.rs  graph.rs  if_changed.rs  only_if.rs
